Cabal-Version:       2.2
Build-Type:          Simple

Name:                landlock
Version:             0.1.0.0
Synopsis:            Haskell bindings for the Linux Landlock API
Description:
  This library exposes Haskell bindings for the Linux kernel Landlock API.
  .
  The Linux kernel Landlock API provides unprivileged access control. The goal
  of Landlock is to enable to restrict ambient rights (e.g. global filesystem
  access) for a set of processes. Because Landlock is a stackable LSM, it makes
  possible to create safe security sandboxes as new security layers in addition
  to the existing system-wide access-controls. This kind of sandbox is expected
  to help mitigate the security impact of bugs or unexpected/malicious
  behaviors in user space applications. Landlock empowers any process,
  including unprivileged ones, to securely restrict themselves.
  .
  For more information, see the <https://landlock.io/ Landlock homepage> and its
  <https://docs.kernel.org/userspace-api/landlock.html kernel documentation>.
Homepage:            https://github.com/NicolasT/landlock-hs
Bug-Reports:         https://github.com/NicolasT/landlock-hs/issues
License:             BSD-3-Clause
License-File:        LICENSE
Author:              Nicolas Trangez
Maintainer:          ikke@nicolast.be
Copyright:           (c) 2022 Nicolas Trangez
Category:            System
Stability:           alpha

Extra-Source-Files:
  CHANGELOG.md
  README.md

Tested-With:         GHC == 8.10.5

Source-Repository head
  Type:                git
  Location:            https://github.com/NicolasT/landlock-hs.git
  Branch:              main

Library
  Exposed-Modules:     MyLib
  -- other-modules:
  -- other-extensions:
  Build-Depends:       base ^>=4.14.2.0
  Hs-Source-Dirs:      src
  Default-Language:    Haskell2010
  Ghc-Options:         -Wall

Test-Suite landlock-test
  Default-Language:    Haskell2010
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      test
  Main-Is:             MyLibTest.hs
  Build-Depends:       base ^>=4.14.2.0
