Cabal-Version:       2.2
Build-Type:          Simple

Name:                landlock
Version:             0.2.1.0
Synopsis:            Haskell bindings for the Linux Landlock API
Description:
  This library exposes Haskell bindings for the Linux kernel Landlock API.
  .
  The Linux kernel Landlock API provides unprivileged access control. The goal
  of Landlock is to enable to restrict ambient rights (e.g. global filesystem
  access) for a set of processes. Because Landlock is a stackable LSM, it makes
  possible to create safe security sandboxes as new security layers in addition
  to the existing system-wide access-controls. This kind of sandbox is expected
  to help mitigate the security impact of bugs or unexpected/malicious
  behaviors in user space applications. Landlock empowers any process,
  including unprivileged ones, to securely restrict themselves.
  .
  For more information, see the <https://landlock.io/ Landlock homepage> and its
  <https://docs.kernel.org/userspace-api/landlock.html kernel documentation>.
Homepage:            https://github.com/NicolasT/landlock-hs
Bug-Reports:         https://github.com/NicolasT/landlock-hs/issues
License:             BSD-3-Clause
License-File:        LICENSE
Author:              Nicolas Trangez
Maintainer:          ikke@nicolast.be
Copyright:           (c) 2022 Nicolas Trangez
Category:            System
Stability:           alpha

Extra-Source-Files:
  CHANGELOG.md
  README.md
  cbits/hs-landlock.h
  cbits/linux/landlock.h
  cbits/linux/GPL-2.0
  cbits/linux/Linux-syscall-note

Tested-With:         GHC ==8.10.5
                   , GHC ==9.0.2
                   , GHC ==9.2.2
                   , GHC ==9.4.2

Source-Repository head
  Type:                git
  Location:            https://github.com/NicolasT/landlock-hs.git
  Subdir:              landlock
  Branch:              main

Common common-settings
  Default-Language:    Haskell2010
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wmissing-home-modules
    -Widentities
    -Wredundant-constraints
    -Wcpp-undef
    -Wmissing-export-lists
  Cc-Options:
    -Wall
    -Wextra
    -pedantic

Library
  Import:              common-settings
  Exposed-Modules:     System.Landlock
  Build-Depends:       landlock-internal
                     , base ^>=4.14.2.0 || ^>=4.15 || ^>=4.16 || ^>=4.17
                     , exceptions ^>=0.10.4
                     , unix ^>=2.7.2.2 || ^>=2.8
  Hs-Source-Dirs:      src
  Other-Extensions:    FlexibleContexts
                       RankNTypes

Library landlock-internal
  Import:              common-settings
  Exposed-Modules:     System.Landlock.Flags
                     , System.Landlock.OpenPath
                     , System.Landlock.Rules
                     , System.Landlock.Syscalls
                     , System.Landlock.Version
  Include-Dirs:        cbits
  C-Sources:           cbits/hs-landlock.c
  Build-Depends:       psx ^>=0.1
                     , base
                     , exceptions
                     , unix
  Build-Tool-Depends:  hsc2hs:hsc2hs
  Hs-Source-Dirs:      internal
  Other-Extensions:    CApiFFI
                       DataKinds
                       EmptyCase
                       EmptyDataDeriving
                       FlexibleInstances
                       GADTs
                       KindSignatures
                       LambdaCase
                       StandaloneDeriving

Executable landlocked
  Import:              common-settings
  Main-Is:             landlocked.hs
  Other-Modules:       Paths_landlock
  Autogen-Modules:     Paths_landlock
  Hs-Source-Dirs:      bin
  Build-Depends:       landlock
                     , base ^>=4.14.2.0 || ^>=4.15 || ^>=4.16 || ^>=4.17
                     , exceptions ^>=0.10.4
                     , optparse-applicative ^>=0.16.1.0
                     , unix ^>=2.7.2.2 || ^>=2.8

Test-Suite landlock-test
  Import:              common-settings
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      test
  Main-Is:             landlock-test.hs
  Other-Modules:       ThreadedScenario
  Build-Depends:       landlock
                     , landlock-internal
                     , base
                     , async ^>=2.2.3
                     , filepath ^>=1.4.2.1
                     , process ^>=1.6.9.0
                     , quickcheck-classes-base ^>=0.6.2.0
                     , tasty ^>=1.4.1
                     , tasty-hunit ^>=0.10.0.3
                     , tasty-quickcheck ^>=0.10.1.2
  Other-Extensions:    CApiFFI
                       DataKinds
                       FlexibleInstances
                       LambdaCase
                       TypeApplications

Test-Suite landlock-test-threaded
  Import:              common-settings
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      test
  Main-Is:             landlock-test-threaded.hs
  Other-Modules:       ThreadedScenario
  Build-Depends:       landlock
                     , base
                     , async ^>=2.2.3
                     , tasty ^>=1.4.1
                     , tasty-hunit ^>=0.10.0.3
  Ghc-Options:         -threaded -with-rtsopts -N2
  Other-Extensions:    CApiFFI

Test-Suite landlock-readme
  Import:              common-settings
  Type:                exitcode-stdio-1.0
  Main-Is:             README.lhs
  Other-Modules:       ReadmeUtils
  Hs-Source-Dirs:      .
                     , test
  Build-Depends:       landlock
                     , base
                     , directory ^>=1.3.6.0
                     , filepath ^>=1.4.2.1
                     , process ^>=1.6.9.0
                     , temporary ^>=1.3
  Build-Tool-Depends:  markdown-unlit:markdown-unlit
  Ghc-Options:         -pgmL markdown-unlit

Test-Suite landlocked-test
  Import:              common-settings
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      test
  Main-Is:             landlocked-test.hs
  Build-Depends:       base ^>=4.14.2.0 || ^>=4.15 || ^>=4.16 || ^>=4.17
                     , filepath ^>=1.4.2.1
                     , process ^>=1.6.9.0
                     , tasty ^>=1.4.1
                     , tasty-hunit ^>=0.10.0.3
                     , temporary ^>=1.3
  Build-Tool-Depends:  landlock:landlocked
